--- a/game.html
+++ b/game.html
@@ -1,4 +1,12 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Snake Man 🐍</title>
+</head>
+<body style="background-color: rgb(194, 191, 191);">
+    
 <div style="position: absolute; left: 45%;">
     <h1>Snake Man 🐍</h1>
 </div>
@@ -14,6 +22,9 @@
     </h1>
 </div>
 <h3 style="position: absolute; left: 44%; top: 88%" id="outputloose"></h3>
+
+</body>
+</html>
 
 <script>
     window.onload=function() {
